--- a/index.html
+++ b/index.html
@@ -20,93 +20,56 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
         <title>Nike. Just Do It. Nike IN</title>
-        <link rel="icon" href="./ICON/nike-64.ico">
+        <link rel="icon" href="./ICON//yonex-icon.png">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
-            <div class="container mr-auto">
-                <a class="navbar-brand" href="#"><img src="./SVG/jordan-2.svg" alt="JORDAN-ICON"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help</a>
-                        </li>
-                        <div class="vr"></div>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Join</a>
-                        </li>
-                        <div class="vr"></div>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sign In</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container mr-auto">
-                <a class="navbar-brand" href="#"><img src="./SVG/nike-swoosh-logo.svg" alt="JORDAN-ICON"></a>
+                <a class="navbar-brand" href="#"><img src="./SVG/Yonex_Logo.svg" height="30" alt="JORDAN-ICON"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Men</a>
+                            <a class="nav-link" href="#">BADMINTON</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Woman</a>
+                            <a class="nav-link" href="#">TENNIS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Kids</a>
+                            <a class="nav-link" href="#">GOLF</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Customise</a>
+                            <a class="nav-link" href="#">RUNNING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sale</a>
+                            <a class="nav-link" href="#">SNOWBOARDING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SNKRS</a>
+                            <a class="nav-link" href="#">NEWS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT</a>
                         </li>
                     </ul>
                 </div>
                 
             </div>
         </nav>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
-            <div class="container mr-auto justify-content-center">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <p class="text-black">Students Now Get 10% Off</p>
-                        </div>
-                        <div class="carousel-item">
-                            <p class="text-black">Save Up to 40%</p>
-                        </div>
-                        <div class="carousel-item">
-                            <p class="text-black">It's taking us a bit longer than usual to get your order to you. Thank you for your patience.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./IMG/Nike-banner-3.jpg" class="d-block w-100" alt="...">
+                            <img src="./WEBP/banner1-yonex.webp" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./WEBP/nike-website-banner-landscape.webp" class="d-block w-100" alt="...">
+                            <img src="./WEBP/banner2-yonex.webp" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./IMG/nike-shop-now.jpg" class="d-block w-100" alt="...">
+                            <img src="./WEBP/banner3-yonex.webp" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -117,6 +80,30 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-lg-5 mt-sm-3">
+            <div class="row">
+                <h3 class="mb-3 sandal-heading">Featured</h3>
+                <div class="col-md-6 mb-3">
+                    <div class="card border-0">
+                        <h1></h1>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <div class="card border-0">
+                        <img class="img-fluid" alt="100%x280" src="./IMG/nike-just-do-it(2).png">
+                        <div class="card-img-overlay d-flex justify-content-start align-items-end">
+                            <div class="card border-0 bg-transparent">
+                                <div class="card-body">
+                                    <p class="card-text text-black">The Latest Air Force 1</p><br/>
+                                    <a href="#" class="btn btn-dark rounded-pill">Shop</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
