--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-        <title>Nike. Just Do It. Nike IN</title>
+        <title>Yonex - India</title>
         <link rel="icon" href="./ICON//yonex-icon.png">
     </head>
     <body>
@@ -84,21 +84,29 @@
             </div>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <div class="row">
                 <h3 class="mb-3 sandal-heading">Featured</h3>
                 <div class="col-md-6 mb-3">
                     <div class="card border-0">
-                        <h1></h1>
+                        <img class="img-fluid" alt="100%x280" src="./WEBP/tennis-racket.webp">
+                        <div class="card-img-overlay d-flex justify-content-start align-items-end">
+                            <div class="card border-0 bg-transparent">
+                                <div class="card-body">
+                                    <p class="card-text text-white">Tennis</p><br/>
+                                    <a href="#" class="btn btn-light rounded-pill">Shop</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 mb-3">
                     <div class="card border-0">
-                        <img class="img-fluid" alt="100%x280" src="./IMG/nike-just-do-it(2).png">
+                        <img class="img-fluid" alt="100%x280" src="./WEBP/golf-racket.webp">
                         <div class="card-img-overlay d-flex justify-content-start align-items-end">
                             <div class="card border-0 bg-transparent">
                                 <div class="card-body">
-                                    <p class="card-text text-black">The Latest Air Force 1</p><br/>
+                                    <p class="card-text text-black">Golf</p><br/>
                                     <a href="#" class="btn btn-dark rounded-pill">Shop</a>
                                 </div>
                             </div>
@@ -108,7 +116,38 @@
             </div>
         </div>
 
-        <div class="container mt-lg-4 mt-sm-2">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <div class="card border-0">
+                        <img class="img-fluid" alt="100%x280" src="./WEBP/yonex-shirt.webp">
+                        <div class="card-img-overlay d-flex justify-content-start align-items-end">
+                            <div class="card border-0 bg-transparent">
+                                <div class="card-body">
+                                    <p class="card-text text-white">T-Shirts</p><br/>
+                                    <a href="#" class="btn btn-light rounded-pill">Shop</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <div class="card border-0">
+                        <img class="img-fluid" alt="100%x280" src="./WEBP/yonex-batminton.webp">
+                        <div class="card-img-overlay d-flex justify-content-start align-items-end">
+                            <div class="card border-0 bg-transparent">
+                                <div class="card-body">
+                                    <p class="card-text text-black">Golf</p><br/>
+                                    <a href="#" class="btn btn-dark rounded-pill">Batminton</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid mt-lg-4 mt-sm-2">
             <div class="card border-0 mx-auto">
                 <div class="card-body">
                     <p class="card-text text1 text-center">Member Access: Nike ZoomX Invincible Run Flyknit 2</p>
@@ -121,7 +160,7 @@
             </div>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <div class="row">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -142,12 +181,12 @@
             </div>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <section class="pt-5 pb-5">
                 <div class="container">
                     <div class="row">
                         <div class="col-6">
-                            <h3 class="mb-3 sandal-heading">Shop Nike Sandals</h3>
+                            <h3 class="mb-3 sandal-heading">Shop Sandals</h3>
                         </div>
                         <div class="col-6 text-right">
                             <a class="btn btn-outline-dark mb-3 mr-1 rounded-circle" href="#carouselExampleIndicators2" role="button" data-slide="prev">
@@ -278,32 +317,7 @@
             </section>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
-            <div class="row">
-                <h3 class="mb-3 sandal-heading">The Latest</h3>
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./IMG/nike-just-do-it.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <div class="card border-0 bg-transparent">
-                                    <div class="card-body">
-                                        <p class="card-text text1 text-dark text-start">Just In: Nike SuperRep Go 3</p>
-                                        <h1 class="card-text text2 text-dark text-start">A BETTER</h1>
-                                        <h1 class="card-text text2 text-dark text-start">WORKOUT</h1>
-                                        <h1 class="card-text text2 text-dark text-start">STARTS HERE</h1>
-                                        <p class="card-text text1 text-dark text-start">Sweat in out in a shoe that supports all ways you move</p>
-                                        <a href="#" class="btn btn-dark rounded-pill">Shop</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <div class="row">
                 <h3 class="mb-3 sandal-heading">Featured</h3>
                 <div class="col-md-6 mb-3">
@@ -335,20 +349,20 @@
             </div>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <div class="row">
                 <h3 class="mb-3 sandal-heading">Just In</h3>
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./IMG/nike-just-do-it(3).png" class="d-block w-100" alt="...">
+                            <img src="./WEBP/yonex-banner5.webp" class="d-block w-100" alt="...">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container mt-lg-4 mt-sm-2">
+        <div class="container-fluid mt-lg-4 mt-sm-2">
             <div class="card border-0 mx-auto">
                 <div class="card-body">
                     <p class="card-text text1 text-center">The Progress Pack</p>
@@ -360,35 +374,9 @@
             </div>
         </div>
 
-        <div class="container mt-lg-5 mt-sm-3">
+        <div class="container-fluid mt-lg-5 mt-sm-3">
             <div class="row">
-                <h3 class="mb-3 sandal-heading">Don't Miss</h3>
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./WEBP/9e80ffd5-e57b-498c-8443-582e89bdae33.webp" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container mt-lg-4 mt-sm-2">
-            <div class="card border-0 mx-auto">
-                <div class="card-body">
-                    <p class="card-text text1 text-center">Flex Runner 2</p>
-                    <h1 class="card-title text2 text-center">FASTER TO FUN</h1>
-                    <p class="card-text text1 text-center">Introducing the latest innovation for kids - on in seconds, gone in a flash</p>
-                    <div class="col text-center mt-4">
-                        <a href="#" class="btn btn-dark rounded-pill">Shop</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container mt-lg-5 mt-sm-3">
-            <div class="row">
-                <h3 class="mb-3 sandal-heading">More Nike</h3>
+                <h3 class="mb-3 sandal-heading">More Yonex</h3>
                 <div class="col-md-4 mb-3">
                     <div class="card border-0">
                         <img class="card-img" alt="100%x280" src="./IMG/nike-just-do-it(4).png">
@@ -535,7 +523,7 @@
                             <a href="#!" class="text-white footer-link-light">Payment Options</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white footer-link-light">Contact Us On Nike.com Inquiries</a>
+                            <a href="#!" class="text-white footer-link-light">Contact Us On Yonex.com Inquiries</a>
                         </li>
                         <li>
                             <a href="#!" class="text-white footer-link-light">Contact Us On All Other Inquiries</a>
@@ -548,7 +536,7 @@
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white footer-link-bold">ABOUT NIKE</a>
+                            <a href="#!" class="text-white footer-link-bold">ABOUT YONEX</a>
                         </li>
                         <li>
                             <a href="#!" class="text-white footer-link-light">News</a>
@@ -579,7 +567,7 @@
                             <a href="#!" class="text-white footer-link-light">Terms of Use</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white footer-link-light">Nike Privacy Policy</a>
+                            <a href="#!" class="text-white footer-link-light">Yonex Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
